public/tailwind.css
/* ... */
.h-\[420px\] {
  height: 420px;
}

.h-\[44px\] {
  height: 44px;
}

.h-\[460px\] {
  height: 460px;
}

.h-\[48\%\] {
  height: 48%;
}

.h-\[480px\] {
  height: 480px;
}

.h-\[4px\] {
  height: 4px;
}

.h-\[520px\] {
  height: 520px;
}

.h-\[52px\] {
  height: 52px;
}

.h-\[620px\] {
  height: 620px;
}

.h-\[80px\] {
  height: 80px;
}

.h-\[calc\(100\%\)\] {
  height: calc(100%);
}

.h-\[calc\(100vh-64px\)\] {
  height: calc(100vh - 64px);
}

.h-auto {
  height: auto;
}

.h-fit {
  height: -moz-fit-content;
  height: fit-content;
}

.h-full {
  height: 100%;
}

.h-px {
  height: 1px;
}

.max-h-48 {
  max-height: 12rem;
}

.max-h-\[320px\] {
  max-height: 320px;
}

.max-h-\[330px\] {
  max-height: 330px;
}

.max-h-\[40px\] {
  max-height: 40px;
}

.max-h-\[470px\] {
  max-height: 470px;
}

.max-h-\[480px\] {
  max-height: 480px;
}

.max-h-\[60vh\] {
  max-height: 60vh;
}

.max-h-\[calc\(100vh-100px\)\] {
  max-height: calc(100vh - 100px);
}

.max-h-\[calc\(100vh-120px\)\] {
  max-height: calc(100vh - 120px);
}

.max-h-\[calc\(100vh-160px\)\] {
  max-height: calc(100vh - 160px);
}

.max-h-\[calc\(100vh-200px\)\] {
  max-height: calc(100vh - 200px);
}

.min-h-\[1\.08em\] {
  min-height: 1.08em;
}

.min-h-\[200px\] {
  min-height: 200px;
}

.min-h-\[32px\] {
  min-height: 32px;
}

.min-h-\[330px\] {
  min-height: 330px;
}

.min-h-\[360px\] {
  min-height: 360px;
}

.min-h-\[400px\] {
  min-height: 400px;
}

.min-h-\[420px\] {
  min-height: 420px;
}

.min-h-\[480px\] {
  min-height: 480px;
}

.min-h-\[800px\] {
  min-height: 800px;
}

.min-h-\[calc\(100vh-64px\)\] {
  min-height: calc(100vh - 64px);
}

.min-h-full {
  min-height: 100%;
}

.min-h-screen {
  min-height: 100vh;
}

.w-1\.5 {
  width: 0.375rem;
}

.w-1\/2 {
  width: 50%;
}

.w-1\/3 {
  width: 33.333333%;
}

.w-10 {
  width: 2.5rem;
}

.w-11 {
  width: 2.75rem;
}

.w-12 {
  width: 3rem;
}

.w-14 {
  width: 3.5rem;
}

.w-16 {
  width: 4rem;
}

.w-2 {
  width: 0.5rem;
}

.w-20 {
  width: 5rem;
}

.w-28 {
  width: 7rem;
}

.w-3 {
  width: 0.75rem;
}

.w-3\.5 {
  width: 0.875rem;
}

.w-3\/4 {
  width: 75%;
}

.w-4 {
  width: 1rem;
}

.w-40 {
  width: 10rem;
}

.w-48 {
  width: 12rem;
}

.w-5 {
  width: 1.25rem;
}

.w-52 {
  width: 13rem;
}

.w-56 {
  width: 14rem;
}

.w-6 {
  width: 1.5rem;
}

.w-64 {
  width: 16rem;
}

.w-7 {
  width: 1.75rem;
}

.w-72 {
  width: 18rem;
}

.w-8 {
  width: 2rem;
}

.w-9 {
  width: 2.25rem;
}

.w-96 {
  width: 24rem;
}

.w-\[110px\] {
  width: 110px;
}

.w-\[112px\] {
  width: 112px;
}

.w-\[120px\] {
  width: 120px;
}

.w-\[134px\] {
  width: 134px;
}

.w-\[200\%\] {
  width: 200%;
}

.w-\[206px\] {
  width: 206px;
}

.w-\[220px\] {
  width: 220px;
}

.w-\[240px\] {
  width: 240px;
}

.w-\[25\%\] {
  width: 25%;
}

.w-\[280px\] {
  width: 280px;
}

.w-\[286px\] {
  width: 286px;
}

.w-\[2px\] {
  width: 2px;
}

.w-\[320px\] {
  width: 320px;
}

.w-\[360px\] {
  width: 360px;
}

.w-\[37\.5\%\] {
  width: 37.5%;
}

.w-\[380px\] {
  width: 380px;
}

.w-\[3px\] {
  width: 3px;
}

.w-\[420px\] {
  width: 420px;
}

.w-\[44px\] {
  width: 44px;
}

.w-\[460px\] {
  width: 460px;
}

.w-\[480px\] {
  width: 480px;
}

.w-\[4px\] {
  width: 4px;
}

.w-\[520px\] {
  width: 520px;
}

.w-\[52px\] {
  width: 52px;
}

.w-\[60px\] {
  width: 60px;
}

.w-\[620px\] {
  width: 620px;
}

.w-\[80px\] {
  width: 80px;
}

.w-\[min\(92vw\2c 720px\)\] {
  width: min(92vw, 720px);
}

.w-fit {
  width: -moz-fit-content;
  width: fit-content;
}

.w-full {
  width: 100%;
}

.w-max {
  width: -moz-max-content;
  width: max-content;
}

.w-px {
  width: 1px;
}

.min-w-0 {
  min-width: 0px;
}

.min-w-8 {
  min-width: 2rem;
}

.min-w-\[18px\] {
  min-width: 18px;
}

.min-w-\[200px\] {
  min-width: 200px;
}

.min-w-\[600px\] {
  min-width: 600px;
}

.min-w-\[640px\] {
  min-width: 640px;
}

.min-w-\[680px\] {
  min-width: 680px;
}

.min-w-\[700px\] {
  min-width: 700px;
}

.min-w-\[720px\] {
  min-width: 720px;
}

.min-w-\[760px\] {
  min-width: 760px;
}

.max-w-2xl {
  max-width: 42rem;
}

.max-w-3xl {
  max-width: 48rem;
}

.max-w-4xl {
  max-width: 56rem;
}

.max-w-5xl {
  max-width: 64rem;
}

.max-w-6xl {
  max-width: 72rem;
}

.max-w-7xl {
  max-width: 80rem;
}

.max-w-\[1050px\] {
  max-width: 1050px;
}

.max-w-\[1100px\] {
  max-width: 1100px;
}

.max-w-\[1180px\] {
  max-width: 1180px;
}

.max-w-\[1200px\] {
  max-width: 1200px;
}

.max-w-\[120px\] {
  max-width: 120px;
}

.max-w-\[1240px\] {
  max-width: 1240px;
}

.max-w-\[1280px\] {
  max-width: 1280px;
}

.max-w-\[1320px\] {
  max-width: 1320px;
}

.max-w-\[1400px\] {
  max-width: 1400px;
}

.max-w-\[1480px\] {
  max-width: 1480px;
}

.max-w-\[200px\] {
  max-width: 200px;
}

.max-w-\[240px\] {
  max-width: 240px;
}

.max-w-\[260px\] {
  max-width: 260px;
}

.max-w-\[330px\] {
  max-width: 330px;
}

.max-w-\[360px\] {
  max-width: 360px;
}

.max-w-\[460px\] {
  max-width: 460px;
}

.max-w-\[480px\] {
  max-width: 480px;
}

.max-w-\[50\%\] {
  max-width: 50%;
}

.max-w-\[500px\] {
  max-width: 500px;
}

.max-w-\[560px\] {
  max-width: 560px;
}

.max-w-\[580px\] {
  max-width: 580px;
}

.max-w-\[600px\] {
  max-width: 600px;
}

.max-w-\[620px\] {
  max-width: 620px;
}

.max-w-\[680px\] {
  max-width: 680px;
}

.max-w-\[700px\] {
  max-width: 700px;
}

.max-w-\[720px\] {
  max-width: 720px;
}

.max-w-\[760px\] {
  max-width: 760px;
}

.max-w-\[780px\] {
  max-width: 780px;
}

.max-w-\[80\%\] {
  max-width: 80%;
}

.max-w-\[800px\] {
  max-width: 800px;
}

.max-w-\[820px\] {
  max-width: 820px;
}

.max-w-\[840px\] {
  max-width: 840px;
}

.max-w-\[860px\] {
  max-width: 860px;
}

.max-w-\[980px\] {
  max-width: 980px;
}

.max-w-\[calc\(100vw-1\.5rem\)\] {
  max-width: calc(100vw - 1.5rem);
}

.max-w-lg {
  max-width: 32rem;
}

.max-w-md {
  max-width: 28rem;
}

.max-w-none {
  max-width: none;
}

.max-w-screen-xl {
  max-width: 1280px;
}

.max-w-sm {
  max-width: 24rem;
}

.max-w-xl {
  max-width: 36rem;
}

.flex-1 {
  flex: 1 1 0%;
}

.flex-shrink-0 {
  flex-shrink: 0;
}
/* ... */

